Fix quick filter clear button in high contrast mode

--- a/resources/filter.less
+++ b/resources/filter.less
@@ -235,6 +235,7 @@
 	top: 0px;
 	cursor: pointer;
 	display: none;
+	text-align: center;
 
 	.dj_ie7 & {
 		top: 5px;
@@ -250,12 +251,12 @@
 	.icon(filterLTR);
 }
 
-.gridxQuickFilterClearInner,
 .gridxQuickFilterNoFilterBar .gridxQuickFilterComboButton,
 .gridxQuickFilterHasFilterBar .gridxQuickFilterButton {
 	display: none;
 }
 
+.gridxQuickFilterClearInner,
 .gridxFilterBarCloseBtnText,
 .gridxFilterTooltipRemoveBtnText {
 	display: none;
